--- a/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
+++ b/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
@@ -9,11 +9,32 @@ First we must install HTMX. This can be done in two ways:
 # Make our current functionality use HTMX
 
 We'll start with the functionality to add a Todo Item.
+HTMX gives us the possibility to retrieve HTML from the server and to put it in the DOM. To do this we'll have to a change our razor page and our endpoint
 
-Change the view to use htmx
+## Add todo item
 
-Make the endpoint return a partial view
+### Changing our endpoints
 
-Toggle functionality
+This will be an easy change. Just make the all the endpoints except the index in our todo controller return a partial view with the todo item in it. This will make it possible to let HTMX inject a small piece of HTML in our DOM
 
-Delete functionality
+### Changing our razor page
+
+To make use of HTMX in our razor page we have to add 5 htmx attributes
+
+1. First we must set what kind of ajax action we want to use. We want to make a POST request so we'll use `hx-post="<our url>"`
+1. Second we must specify when this POST should be done, we want to submit the form when the user presses enter so on submit. You can do this by using `hx-trigger="submit"`. [Here you can read more about all kinds of triggers](https://htmx.org/attributes/hx-trigger/)
+1. Now that we fire this AJAX request we should do something with the HTML response. We can do this by utilizing `hx-swap="beforeend"`. Give this a try. [Here you can read more about where the HTML can be placed](https://htmx.org/attributes/hx-swap/).
+1. As you can see the HTML is rendered on the page but not in the right place. We can specify where we want to render the new HTML by using `hx-target="#todo-list"`
+1. To give the user a nice experience we might want to clear the input when it is submitted. This can be done with an after request. The syntax to do this is `hx-on::after-request="this.reset()"`
+
+## Toggle todo item
+
+## Delete todo item
+
+To change our current delete button into an HTMX button we must add/change the following things:
+
+1. Replace the `@Html.ActionLink` with an HTML `<button>` element. A button is more suitable when using HTMX, as it allows more dynamic interactions, such as sending HTTP requests directly from the button.
+1. hx-delete: This specifies the URL to send a DELETE request to. Use @Url.Action to generate the same URL that the ActionLink was pointing to.
+1. hx-target: This targets the specific DOM element (e.g., a list item) that should be updated or removed upon completion of the action. Use the item's ID to target it specifically.
+1. hx-trigger: This specifies the event that will trigger the HTMX request. For this scenario, a click event on the button is used.
+1. hx-swap: This defines how the response from the server should be handled. The "delete" value indicates that the target element will be removed from the DOM upon a successful request.
