--- a/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
+++ b/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
@@ -9,32 +9,38 @@ First we must install HTMX. This can be done in two ways:
 # Make our current functionality use HTMX
 
 We'll start with the functionality to add a Todo Item.
-HTMX gives us the possibility to retrieve HTML from the server and to put it in the DOM. To do this we'll have to a change our razor page and our endpoint
+HTMX gives us the possibility to retrieve HTML from the server and to put it in the DOM. To do this we'll have to a change our razor pages and our endpoints
 
-## Add todo item
-
-### Changing our endpoints
+## Changing our endpoints
 
 This will be an easy change. Just make the all the endpoints except the index in our todo controller return a partial view with the todo item in it. This will make it possible to let HTMX inject a small piece of HTML in our DOM
 
-### Changing our razor page
+## Add Todo Item
 
-To make use of HTMX in our razor page we have to add 5 htmx attributes
+To enable HTMX in our Razor page for adding a new todo item, we'll need to add or modify five HTMX attributes:
 
-1. First we must set what kind of ajax action we want to use. We want to make a POST request so we'll use `hx-post="<our url>"`
-1. Second we must specify when this POST should be done, we want to submit the form when the user presses enter so on submit. You can do this by using `hx-trigger="submit"`. [Here you can read more about all kinds of triggers](https://htmx.org/attributes/hx-trigger/)
-1. Now that we fire this AJAX request we should do something with the HTML response. We can do this by utilizing `hx-swap="beforeend"`. Give this a try. [Here you can read more about where the HTML can be placed](https://htmx.org/attributes/hx-swap/).
-1. As you can see the HTML is rendered on the page but not in the right place. We can specify where we want to render the new HTML by using `hx-target="#todo-list"`
-1. To give the user a nice experience we might want to clear the input when it is submitted. This can be done with an after request. The syntax to do this is `hx-on::after-request="this.reset()"`
+1. **Action Type (`hx-post`)**: First, specify the type of AJAX action we want to perform. Since we're adding a new item, we'll make a POST request using `hx-post="<your-url>"`.
+2. **Trigger (`hx-trigger`)**: Next, define when the POST request should be triggered. We'll trigger the request upon form submission when the user presses Enter. Use `hx-trigger="submit"`. [Learn more about triggers here](https://htmx.org/attributes/hx-trigger/).
+3. **Response Handling (`hx-swap`)**: After firing the AJAX request, we need to determine how to handle the HTML response. We'll insert the new content before the end of our todo list using `hx-swap="beforeend"`. [Explore more swap options](https://htmx.org/attributes/hx-swap/).
+4. **Targeting (`hx-target`)**: Ensure the HTML is rendered in the correct location by specifying the target element where the new content should be inserted. Use `hx-target="#todo-list"`. [Read more about target options](https://htmx.org/attributes/hx-target/)
+5. **Post-Request Action (`hx-on`)**: To enhance the user experience, we'll clear the input field after the item is submitted. This can be done with `hx-on="afterRequest: this.reset()"`.
 
-## Toggle todo item
+## Toggle Todo Item
 
-## Delete todo item
+To convert our toggle functionality to use HTMX, we need to adjust the form element and add the following attributes:
 
-To change our current delete button into an HTMX button we must add/change the following things:
+1. **Element Replacement**: Replace the entire `<form>` element with a single `<input>` element. HTMX will handle the request, so a form is no longer necessary.
+2. **Action Type (`hx-put`)**: Specify the URL to send a PUT request when the checkbox is clicked. Use `hx-put="@Url.Action('Toggle', 'Todo', new { id = <item-id> })"` to target the correct action in your controller.
+3. **Targeting (`hx-target`)**: Indicate which part of the DOM should be updated after the action is completed. In this case, target the specific list item by its ID with `hx-target="#todo-item-<item-id>"`.
+4. **Trigger (`hx-trigger`)**: Define the event that triggers the request. Here, a click event on the checkbox will initiate the request using `hx-trigger="click"`.
+5. **Response Handling (`hx-swap`)**: Determine how the response from the server should be handled. Use `hx-swap="outerHTML"` to replace the entire checkbox element with the server's response, which may include a modified checkbox or any other updated content.
 
-1. Replace the `@Html.ActionLink` with an HTML `<button>` element. A button is more suitable when using HTMX, as it allows more dynamic interactions, such as sending HTTP requests directly from the button.
-1. hx-delete: This specifies the URL to send a DELETE request to. Use @Url.Action to generate the same URL that the ActionLink was pointing to.
-1. hx-target: This targets the specific DOM element (e.g., a list item) that should be updated or removed upon completion of the action. Use the item's ID to target it specifically.
-1. hx-trigger: This specifies the event that will trigger the HTMX request. For this scenario, a click event on the button is used.
-1. hx-swap: This defines how the response from the server should be handled. The "delete" value indicates that the target element will be removed from the DOM upon a successful request.
+## Delete Todo Item
+
+To transform our delete button into an HTMX-powered element, we need to make the following changes:
+
+1. **Element Replacement**: Replace the `@Html.ActionLink` with an HTML `<button>` element. Buttons are better suited for HTMX interactions, enabling more dynamic HTTP requests directly from the button.
+2. **Action Type (`hx-delete`)**: Specify the URL for sending a DELETE request. Use `hx-delete="@Url.Action('Delete', 'Todo', new { id = <item-id> })"` to direct the request to the appropriate action.
+3. **Targeting (`hx-target`)**: Target the specific DOM element that should be updated or removed upon completion. Use the item's ID with `hx-target="#todo-item-<item-id>"` to ensure only the correct item is affected.
+4. **Trigger (`hx-trigger`)**: Define the event that will trigger the HTMX request. For deleting an item, use a click event on the button with `hx-trigger="click"`.
+5. **Response Handling (`hx-swap`)**: Determine how the response from the server should be handled. The `hx-swap="delete"` value will remove the target element from the DOM after a successful request.
