Use thymleaf examples in java workshop guide

--- a/Workshop/Java/3. New features using HTMX.md
+++ b/Workshop/Java/3. New features using HTMX.md
@@ -7,10 +7,11 @@ We are going to add a feature witch will allow the user to patch the title of a 
 1. A new form to edit the title of the todo item inside the view div. The form looks like this:
 
 ```html
-<form hx-target="#list-item-@Model.Id"
-          hx-patch="@Url.Action("PatchTitle", "Todo", new { id = Model.Id })"
-          hx-swap="outerHTML">
-        <input name="title" class="edit" value="@Model.Title" />
+<form
+	th:attr="hx-patch=@{/{id}(id=${item.id})},hx-target=|#list-item-${item.id}|"
+	hx-swap="outerHTML"
+>
+	<input name="title" class="edit" th:value="${item.title}" />
 </form>
 ```
 
