--- a/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
+++ b/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
@@ -13,7 +13,7 @@ HTMX gives us the possibility to retrieve HTML from the server and to put it in 
 
 ## Changing our endpoints
 
-This will be an easy change. Just make the all the endpoints except the index in our todo controller return a partial view with the todo item in it. This will make it possible to let HTMX inject a small piece of HTML in our DOM
+This will be an easy change. Just make all the endpoints except the index in our todo controller return a partial view with the todo item in it. This will make it possible to let HTMX inject a small piece of HTML in our DOM
 
 ## Add Todo Item
 
