Fixed id name + changed single quotes to double quotes

--- a/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
+++ b/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
@@ -30,8 +30,8 @@ To enable HTMX in our Razor page for adding a new todo item, we'll need to add o
 To convert our toggle functionality to use HTMX, we need to adjust the form element and add the following attributes:
 
 1. **Element Replacement**: Replace the entire `<form>` element with a single `<input>` element. HTMX will handle the request, so a form is no longer necessary.
-2. **Action Type (`hx-put`)**: Specify the URL to send a PUT request when the checkbox is clicked. Use `hx-put="@Url.Action('Toggle', 'Todo', new { id = <item-id> })"` to target the correct action in your controller.
-3. **Targeting (`hx-target`)**: Indicate which part of the DOM should be updated after the action is completed. In this case, target the specific list item by its ID with `hx-target="#todo-item-<item-id>"`.
+2. **Action Type (`hx-put`)**: Specify the URL to send a PUT request when the checkbox is clicked. Use `hx-put="@Url.Action("Toggle", "Todo", new { id = <item-id> })"` to target the correct action in your controller.
+3. **Targeting (`hx-target`)**: Indicate which part of the DOM should be updated after the action is completed. In this case, target the specific list item by its ID with `hx-target="#list-item-<item-id>"`.
 4. **Trigger (`hx-trigger`)**: Define the event that triggers the request. Here, a click event on the checkbox will initiate the request using `hx-trigger="click"`.
 5. **Response Handling (`hx-swap`)**: Determine how the response from the server should be handled. Use `hx-swap="outerHTML"` to replace the entire checkbox element with the server's response, which may include a modified checkbox or any other updated content.
 
@@ -40,7 +40,7 @@ To convert our toggle functionality to use HTMX, we need to adjust the form elem
 To transform our delete button into an HTMX-powered element, we need to make the following changes:
 
 1. **Element Replacement**: Replace the `@Html.ActionLink` with an HTML `<button>` element. Buttons are better suited for HTMX interactions, enabling more dynamic HTTP requests directly from the button.
-2. **Action Type (`hx-delete`)**: Specify the URL for sending a DELETE request. Use `hx-delete="@Url.Action('Delete', 'Todo', new { id = <item-id> })"` to direct the request to the appropriate action.
-3. **Targeting (`hx-target`)**: Target the specific DOM element that should be updated or removed upon completion. Use the item's ID with `hx-target="#todo-item-<item-id>"` to ensure only the correct item is affected.
+2. **Action Type (`hx-delete`)**: Specify the URL for sending a DELETE request. Use `hx-delete="@Url.Action("Delete", "Todo", new { id = <item-id> })"` to direct the request to the appropriate action.
+3. **Targeting (`hx-target`)**: Target the specific DOM element that should be updated or removed upon completion. Use the item's ID with `hx-target="#list-item-<item-id>"` to ensure only the correct item is affected.
 4. **Trigger (`hx-trigger`)**: Define the event that will trigger the HTMX request. For deleting an item, use a click event on the button with `hx-trigger="click"`.
 5. **Response Handling (`hx-swap`)**: Determine how the response from the server should be handled. The `hx-swap="delete"` value will remove the target element from the DOM after a successful request.
