--- a/Workshop/Java/2. Integrating HTMX with Thymeleaf.md
+++ b/Workshop/Java/2. Integrating HTMX with Thymeleaf.md
@@ -31,7 +31,7 @@ To convert our toggle functionality to use HTMX, we need to adjust the form elem
 
 1. **Element Replacement**: Replace the entire `<form>` element with a single `<input>` element. HTMX will handle the request, so a form is no longer necessary.
 2. **Action Type (`hx-put`)**: Specify the URL to send a PUT request when the checkbox is clicked. Use `hx-put="<your-url>"` to target the correct action in your controller.
-3. **Targeting (`hx-target`)**: Indicate which part of the DOM should be updated after the action is completed. In this case, target the specific list item by its ID with `hx-target="#todo-item-<item-id>"`.
+3. **Targeting (`hx-target`)**: Indicate which part of the DOM should be updated after the action is completed. In this case, target the specific list item by its ID with `hx-target="#list-item-<item-id>"`.
 4. **Trigger (`hx-trigger`)**: Define the event that triggers the request. Here, a click event on the checkbox will initiate the request using `hx-trigger="click"`.
 5. **Response Handling (`hx-swap`)**: Determine how the response from the server should be handled. Use `hx-swap="outerHTML"` to replace the entire checkbox element with the server's response, which may include a modified checkbox or any other updated content.
 
@@ -41,6 +41,6 @@ To transform our delete button into an HTMX-powered element, we need to make the
 
 1. **Element Replacement**: Replace the delete form with an HTML `<button>` element. Buttons are better suited for HTMX interactions, enabling more dynamic HTTP requests directly from the button.
 2. **Action Type (`hx-delete`)**: Specify the URL for sending a DELETE request. Use `hx-delete="<your-url>"` to direct the request to the appropriate action.
-3. **Targeting (`hx-target`)**: Target the specific DOM element that should be updated or removed upon completion. Use the item's ID with `hx-target="#todo-item-<item-id>"` to ensure only the correct item is affected.
+3. **Targeting (`hx-target`)**: Target the specific DOM element that should be updated or removed upon completion. Use the item's ID with `hx-target="#list-item-<item-id>"` to ensure only the correct item is affected.
 4. **Trigger (`hx-trigger`)**: Define the event that will trigger the HTMX request. For deleting an item, use a click event on the button with `hx-trigger="click"`.
 5. **Response Handling (`hx-swap`)**: Determine how the response from the server should be handled. The `hx-swap="delete"` value will remove the target element from the DOM after a successful request.
