Fix hx-on::after request

--- a/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
+++ b/Workshop/.NET/2. Integrating HTMX with ASP.NET core.md
@@ -23,7 +23,7 @@ To enable HTMX in our Razor page for adding a new todo item, we'll need to add o
 2. **Trigger (`hx-trigger`)**: Next, define when the POST request should be triggered. We'll trigger the request upon form submission when the user presses Enter. Use `hx-trigger="submit"`. [Learn more about triggers here](https://htmx.org/attributes/hx-trigger/).
 3. **Response Handling (`hx-swap`)**: After firing the AJAX request, we need to determine how to handle the HTML response. We'll insert the new content before the end of our todo list using `hx-swap="beforeend"`. [Explore more swap options](https://htmx.org/attributes/hx-swap/).
 4. **Targeting (`hx-target`)**: Ensure the HTML is rendered in the correct location by specifying the target element where the new content should be inserted. Use `hx-target="#todo-list"`. [Read more about target options](https://htmx.org/attributes/hx-target/)
-5. **Post-Request Action (`hx-on`)**: To enhance the user experience, we'll clear the input field after the item is submitted. This can be done with `hx-on="afterRequest: this.reset()"`.
+5. **Post-Request Action (`hx-on`)**: To enhance the user experience, we'll clear the input field after the item is submitted. This can be done with `hx-on::after-request="this.reset()""`.
 
 ## Toggle Todo Item
 
